# robot_arm_control_pkg

./: .gitignore  CMakeLists.txt  README.md  action_client.py  action_server.py  package.xml
action/: ServoControl.action  servo_control.action
launch/: display.launch  test.launch
meshes/: shoulder_link.stl  shoulder_link_collision.stl  upper_arm.stl  upper_arm_collision.stl
msg/: servo_controlAction.msg  servo_controlActionFeedback.msg  servo_controlActionResult.msg
msg_test/: servo_controlActionGoal.msg  servo_controlFeedback.msg  servo_controlGoal.msg  servo_controlResult.msg
scripts/: action_server.py  servo_controller.py
urdf/: robot.urdf
