<?xml version="1.0"?>
<package format="2">
  <name>robot_arm_control_pkg</name>
  <version>0.0.0</version>
  <description>The robot_arm_control_pkg package</description>

  <maintainer email="robin_rob96@me.com">Robin H.</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslaunch</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
